@@ -21,8 +21,7 @@ with this program.  If not, see <http://www.gnu.org/licenses/>.
 This is based on the patch texlive-poppler-0.59.patch <2017-09-19> at
 https://git.archlinux.org/svntogit/packages.git/plain/texlive-bin/trunk
 by Arch Linux. The poppler should be 0.59.0 or newer versions.
-It is tested up to the poppler 0.70.1. The poppler 0.71.0 and newer
-ones require pdftosrc-poppler0.71.0.
+The poppler should be 0.71.0 or newer.
 POPPLER_VERSION should be defined.
 */
 
@@ -175,9 +174,9 @@ int main(int argc, char *argv[])
 
                 // parse the header: object numbers and offsets
                 objStr.streamReset();
-                str = new EmbedStream(objStr.getStream(), Object(objNull), gTrue, first);
+                str = new EmbedStream(objStr.getStream(), Object(objNull), true, first);
                 lexer = new Lexer(xref, str);
-                parser = new Parser(xref, lexer, gFalse);
+                parser = new Parser(xref, lexer, false);
                 for (n = 0; n < nObjects; ++n) {
                     obj1 = parser->getObj();
                     obj2 = parser->getObj();
